created a core.validation package, moved BeanValidation groups, Created DeliveryFee annotation as a custom annotation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 #NotBlank.restaurant.name=Restaurant name is mandatory.
 #NotBlank.kitchen.name=Kitchen name is mandatory.
 NotBlank={0} field is mandatory, it cannot be Blank, null and no whitespaces.
+NotNull={0} field must not be null
+DeliveryFee.invalid={0} is invalid
