Added a custom @Multiple annotation for deliverRate

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@
 NotBlank={0} field is mandatory, it cannot be Blank, null and no whitespaces.
 NotNull={0} field must not be null
 DeliveryFee.invalid={0} is invalid
+Multiple={0} must be a multiple of {1}.
