Added missing ValidationConfig for custom error messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,11 @@ NotNull={0} field must not be null
 DeliveryFee.invalid={0} is invalid, should be greater or equal to 0.
 Multiple={0} must be a multiple of {1}.
 ValueZeroIncludesDescription=Field {1} must contain {3} 
+
+# Address
+address.address=Please provide a valid Address
+NotBlank.address.postCode=Please provide a valid UK Post Code.
+NotBlank.address.street=Please provide a valid Street Name
+NotBlank.address.number=Please provide a valid House/Flat number
+NotBlank.address.county=Please provide a valid County
+NotBlank.address.City=Please provide a valid City id.
