Added address fields compulsory when UPDATE|POST /restaurants

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,4 +12,4 @@ NotBlank.address.postCode=Please provide a valid UK Post Code.
 NotBlank.address.street=Please provide a valid Street Name
 NotBlank.address.number=Please provide a valid House/Flat number
 NotBlank.address.county=Please provide a valid County
-NotBlank.address.City=Please provide a valid City id.
+NotNull.address.city=Please provide a valid City id.
