--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 #NotBlank.restaurant.name=Restaurant name is mandatory.
 #NotBlank.kitchen.name=Kitchen name is mandatory.
-NotBlank={0} field is mandatory, it cannot be Blank, null and no whitespaces.
+NotBlank={0} field is mandatory, it cannot be Blank, null and must not contain whitespaces.
 NotNull={0} field must not be null
 DeliveryFee.invalid={0} is invalid, should be greater or equal to 0.
 Multiple={0} must be a multiple of {1}.
@@ -13,3 +13,11 @@ NotBlank.address.street=Please provide a valid Street Name
 NotBlank.address.number=Please provide a valid House/Flat number
 NotBlank.address.county=Please provide a valid County
 NotNull.address.city=Please provide a valid City id.
+
+
+# Products
+
+productInputModel.name=Product name
+productInputModel.description=Product description
+productInputModel.price=Product price
+productInputModel.active=Product status
