Added FileContentType validation and FileSize validation when uploading a file.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,3 +27,7 @@ orderFilter.initialCreatedDate=Initial created date
 orderFilter.endingCreatedDate=Ending created date
 orderFilter.userId=User code
 orderFilter.restaurantId=Restaurant code
+
+#Product Photo
+FileSize.productPhotoInput.file=The photo must have a maximum size of {1}
+FileContentType.productPhotoInput.file=The file type must be of type PNG or JPEG
